add-update-curency
