# docs/swagger.json
@@ -242,6 +242,43 @@
                     }
                 }
             },
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Cập nhật Tiền Tệ",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tiền Tệ"
+                ],
+                "summary": "Cập nhật Tiền Tệ",
+                "parameters": [
+                    {
+                        "description": "Curency data",
+                        "name": "currency",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.CurencyType"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Cập nhật Tiền Tệ Thành Công",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -657,6 +694,23 @@
                 },
                 "image_url": {
                     "type": "string"
+                }
+            }
+        },
+        "model.CurencyType": {
+            "type": "object",
+            "properties": {
+                "currency_code": {
+                    "type": "string"
+                },
+                "currency_id": {
+                    "type": "string"
+                },
+                "currency_name": {
+                    "type": "string"
+                },
+                "exchange_rate": {
+                    "type": "number"
                 }
             }
         },
